--- a/README
+++ b/README
@@ -1,37 +1,60 @@
-Music::Tag::File version 0.29
-============================
+NAME
+    Music::Tag::File - Plugin module for Music::Tag to get information from
+    filename and directory entries.
 
-Music::Tag::File is a plugin module for Music-Tag to gather information
-about a music file from its filename and path.
+DESCRIPTION
+    Music::Tag::File is a Music::Tag plugin used to guess information about
+    a music file from its filename, directory name, or contents of the
+    directory it resides in.
 
-Note:  As of version 0.28, Music-Tag is distributed as seperate packages.
+    This plugin will not overwrite values found by other plugins.
+
+    Music::Tag::File objects must be created by Music::Tag.
 
 INSTALLATION
+    To install this module type the following:
 
-To install this module type the following:
-
-   perl Makefile.PL
-   make
-   make test
-   make install
+       perl Makefile.PL
+       make
+       make test
+       make install
 
 DEPENDENCIES
+    This module requires these other modules and libraries:
 
-This module requires these other modules and libraries:
-
-   Music::Tag
-   File::Spec
+       Music::Tag
+       File::Spec
 
 TEST FILES
+    Included test files are based on the sample file for Audio::M4P. For
+    testing only.
 
-Are based on the sample file for Audio::M4P.  For testing only.
+AUTHOR
+    Edward Allen III <ealleniii _at_ cpan _dot_ org>
 
-COPYRIGHT AND LICENCE
+COPYRIGHT
+    Copyright (c) 2007 Edward Allen III. Some rights reserved.
 
-Copyright (C) 2007 Edward J. Allen III
-ealleniii _at_ cpan _dot_ org
+LICENSE
+    This program is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself, either:
 
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself, either Perl version 5.8.7 or,
-at your option, any later version of Perl 5 you may have available.
+    a) the GNU General Public License as published by the Free Software
+    Foundation; either version 1, or (at your option) any later version, or
+
+    b) the "Artistic License" which comes with Perl.
+
+    This program is distributed in the hope that it will be useful, but
+    WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See either the GNU
+    General Public License or the Artistic License for more details.
+
+    You should have received a copy of the Artistic License with this Kit,
+    in the file named "Artistic". If not, I'll be glad to provide one.
+
+    You should also have received a copy of the GNU General Public License
+    along with this program in the file named "Copying". If not, write to
+    the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
+    Boston, MA 02110-1301, USA or visit their web page on the Internet at
+    http://www.gnu.org/copyleft/gpl.html.
 
