--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
 CHANGES
+	Release Name: 0.4101
+		*	Updated to use new method system
+
+		*	POD Changes
+
 	Release Name: 0.40_01
 		*	Started using git and github
 
@@ -18,5 +23,5 @@ CHANGES
 
         *   Added no_savecover and no_savelyrics
 
-    Release Name: 0.28
+    Release Name: 0.28 2008-02-11
         * Split off from Music::Tag distribution
