--- a/CHANGES
+++ b/CHANGES
@@ -1,10 +1,10 @@
 CHANGES
-	Release Name: 0.4101
+	Release Name: 0.4101 2010-08-16
 		*	Updated to use new method system
 
 		*	POD Changes
 
-	Release Name: 0.40_01
+	Release Name: 0.4001 2010-07-27
 		*	Started using git and github
 
 		*	Normalized version accross plugins.
